# tfg

./: .gitignore  LICENSE  Makefile  pyproject.toml
src/tfg/componentes/: bateria.py  baterias.py  electrodomestico.py  paneles_solares.py  vivienda.py
src/tfg/frontend/: main.py
src/tfg/frontend/display/: bateria.py  electrodomestico.py  panel_solar.py  paneles_solares.py  vivienda.py
src/tfg/resources/: vivienda.yml
tests/: conftest.py  test_electrodomestico.py  test_vivienda.py
tests/componentes/: test_baterias.py  test_electrodomestico.py  test_paneles_solares.py  test_vivienda.py
tests/resources/: vivienda_ejemplo.yml
