[tool.poetry]
name = "tfg"
version = "0.1.0"
description = ""
authors = ["Tonivalle <tonivalle15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.2"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
ruff = "^0.8.1"
mypy = "^1.13.0"
pytest = "^8.3.3"
types-pyyaml = "^6.0.12.20240917"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
